--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "factern-erchl",
+  "name": "factern-ch",
   "version": "0.9.0",
-  "description": "factern-erchl =============",
+  "description": "factern-ch",
   "main": "index.js",
   "scripts": {
     "start": "node dist/",
@@ -9,16 +9,19 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "dependencies": {
+    "@factern/factern-client": "^0.9.4",
+    "@types/auth0-js": "^8.11.2",
     "@types/bluebird": "^3.5.20",
     "@types/graphql": "^0.13.0",
     "@types/request": "^2.47.0",
     "apollo-server-express": "^1.3.6",
+    "auth0-js": "^9.6.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
-    "factern_api_version_2": "http://download.factern.net/javascript/factern-api-js.tgz",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.0",
     "request": "^2.85.0",
@@ -29,7 +32,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org/finovertech/factern-erchl.git"
+    "url": "git+ssh://git@github.com/Factern/factern-ch.git"
   },
-  "homepage": "https://bitbucket.org/finovertech/factern-erchl#readme"
+  "homepage": "https://github.com/Factern/factern-ch#readme"
 }
